package com;

public interface Multiplicador {
    public int multiplicar(int puntaje);
}
