package comTP.model.tipo;

import comTP.model.opcion.*;

public interface Tipo {
    boolean respondidoCorrectamente(Respuesta respuestaCorrecta,
                                                    Respuesta respuestaJugador);
} 
