@startuml

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

abstract class Pregunta {
    - tema:String
    - tipoPregunta:String
    - enunciado:String
    - textoRespuesta:String
    - numeroOpcion:int
    + Pregunta(tipo:Tipo, respuestaCorrecta:Respuesta)
    + Pregunta(tipo:Tipo, respuestaCorrecta:Respuesta, enunciado:String, tipoPregunta:String, opciones:ArrayList<Opcion>, tema:String, textoRespuesta:String)
    + setMultiplicador(Multiplicador multiplicador)
    + mostrarOpcion():Opcion
    + setearRespuestaJugador(respuestaJugador:Respuesta, numeroOpcion:int)
    + getEnunciado():String
    + getTema():String
    + getTipoPregunta():String
    + getTextoRespuesta():String
    + getRespuestaCorrecta():Respuesta
    + tienePenalidad():boolean
    + verificarRespuesta(respuestaJugador:Respuesta):Puntaje
}

together {
    class Puntaje
    class Respuesta
    class Tipo
}

class Opcion {
    - valor:String
    + Opcion(valor:String)
    + equals(o:Object):boolean
    + hashCode():int
    + obtenerValor():String
}

class Puntaje {
    - valor:int
    + Puntaje(puntaje:int)
    + multiplicarseCon(otroPuntaje:Puntaje):Puntaje
    + sumarseCon(otroPuntaje:Puntaje):Puntaje
    + valorNumerico():int
    + equals(Object o):boolean
    + hashCode():int
}

class Respuesta {
    - cantidadDeOpcionesCorrectas:int
    - cantidadDeOpcionesIncorrectas:int
    + Respuesta(opciones:ArrayList<Opcion>)
    + agregarOpcion(opcion:Opcion)
    + eliminarOpciones()
    - otraRespuestaTieneMayorCantidadDeOpciones(otraRespuesta:Respuesta):boolean
    + corregirRespuestaUnica(otraRespuesta:Respuesta):boolean
    + corregirRespuestaSinImportarElOrden(otraRespuesta:Respuesta):boolean
    + corregirImportandoElOrden(otraRespuesta:Respuesta):boolean
    + cantidadDeOpcionesCorrectas():int
    + cantidadDeOpcionesIncorrectas():int
}

class Tipo {
    + respondidoCorrectamente(respuestaCorrecta:Respuesta, respuestaJugador:Respuesta):boolean
}

class Multiplicador {
    + multiplicar(puntaje:Puntaje):Puntaje
}

Tipo <<Interface>>
Multiplicador <<Interface>>
Pregunta o-- "*" Opcion
Respuesta o-left- "*" Opcion
Pregunta --> Respuesta
Pregunta .left.> Puntaje
Pregunta -right-> Multiplicador
Pregunta *-- Tipo
Tipo .left.> Respuesta

@enduml